--- a/client/package.json
+++ b/client/package.json
@@ -20,10 +20,13 @@
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.8",
     "@types/d3": "^7.4.3",
+    "@xyflow/react": "^12.6.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "d3": "^7.9.0",
+    "file-saver": "^2.0.5",
     "framer-motion": "^12.15.0",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.511.0",
     "motion": "^12.15.0",
     "next": "15.3.3",
