--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,9 @@
     "express": "^5.1.0",
     "mongoose": "^8.15.1",
     "multer": "^2.0.0",
+    "nodemailer": "^7.0.3",
     "nodemon": "^3.1.10",
-    "redis": "^5.1.1"
+    "redis": "^5.1.1",
+    "uuid": "^11.1.0"
   }
 }
