--- a/server/package.json
+++ b/server/package.json
@@ -15,10 +15,12 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "googleapis": "^149.0.0",
     "mongoose": "^8.15.1",
     "multer": "^2.0.0",
     "nodemailer": "^7.0.3",
     "nodemon": "^3.1.10",
+    "readline": "^1.3.0",
     "redis": "^5.1.1",
     "uuid": "^11.1.0"
   }
