--- a/ai-server/models/.env
+++ b/ai-server/models/.env
@@ -1,1 +1,7 @@
 GROQ_API_KEY = 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
+NEO4J_URI=neo4j+s://your-neo4j-uri.databases.neo4j.io
+NEO4J_USERNAME=neo4j
+NEO4J_PASSWORD=your-neo4j-password
+NEO4J_DATABASE=neo4j
+GROQ_API_KEY=your-groq-api-key
+LLM_MODEL=llama3-8b-8192
