--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "@supabase/supabase-js": "^2.49.8",
     "@types/d3": "^7.4.3",
     "@xyflow/react": "^12.6.4",
+    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "d3": "^7.9.0",
