Modified Image Path

--- a/ai-server/models/.env
+++ b/ai-server/models/.env
@@ -1,5 +1,4 @@
-GROQ_API_KEY = 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
-NEO4J_URI=neo4j+s://your-neo4j-uri.databases.neo4j.io
+NEO4J_URI=neo4j+s://4e1be7d1.databases.neo4j.io
 NEO4J_USERNAME=neo4j
 NEO4J_PASSWORD=JmNzZQpC5fn-McE111oF-axC9q1dsw6B9TTuRTBl3j8
 NEO4J_DATABASE=neo4j
