--- a/client/package.json
+++ b/client/package.json
@@ -42,6 +42,7 @@
     "react-icons": "^5.5.0",
     "sonner": "^2.0.4",
     "tailwind-merge": "^3.3.0",
+    "xlsx": "^0.18.5",
     "zod": "^3.25.42"
   },
   "devDependencies": {
