--- a/client/package.json
+++ b/client/package.json
@@ -41,6 +41,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
     "react-icons": "^5.5.0",
+    "recharts": "^2.15.3",
     "sonner": "^2.0.4",
     "tailwind-merge": "^3.3.0",
     "xlsx": "^0.18.5",
