--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.8",
     "@types/d3": "^7.4.3",
+    "@vercel/analytics": "^1.5.0",
     "@xyflow/react": "^12.6.4",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
