--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.8",
@@ -37,6 +38,7 @@
     "framer-motion": "^12.15.0",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.511.0",
+    "mapbox-gl": "^3.15.0",
     "motion": "^12.15.0",
     "next": "15.3.3",
     "next-themes": "^0.4.6",
